<?xml version="1.0" encoding="utf-8"?>
<!--
Copyright 2014 Sheldon Neilson www.neilson.co.za

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.
-->
<resources>

    <!-- Application -->
    <color name="holo_blue_light">#ff33b5e5</color>

    <!-- Math Alarm Activity -->
    <string name="app_name">Multimodal Weather Clock! </string>
    <string name="title_activity_set_alarms">Set Alarm</string>
    <string name="no_alarms">No alarms have been set</string>
    <string name="button_new">New</string>

    <!-- Menu -->
    <string name="menu_item_new">New</string>
    <string name="menu_item_save">Save</string>
    <string name="menu_item_delete">Cancel</string>
    <string name="menu_item_checkio">Check I/O</string>
    <string name="menu_item_rate">Rate on Goolge Play</string>
    <string name="menu_item_website">Website</string>
    <string name="menu_item_report">Report a Bug</string>

    <!-- Alert -->
    <string name="_0">0</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="decimal_button_text">,</string>
    <string name="clear_button_text">Clear</string>
    <string name="minus_button_text">-</string>

    <color name="title_background_color">#000000</color>

    <string name="button_delete">Delete</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="weatherfake"></string>
    <string name="bell"></string>
    <string name="title_activity_shake">ShakeActivity</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_speech">SpeechActivity</string>

    <!-- Weather Alarm Activity -->
    <string name="textsunny">sunny</string>
    <string name="speechConfirm">Bingooo!</string>
    <string name="title_activity_noise">NoiseActivity</string>

    <!-- Noise Activity -->
    <string name="settings">Settings</string>
    <string name="threshold">Threshold</string>
    <string name="call_number">Callout Number</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="test">Test</string>
    <string name="panic">Panic</string>
    <string name="stopped">stopped</string>
    <string name="alert_heading">Alert Settings</string>
    <string name="power_heading">Power save settings</string>
    <string name="alert_phone">Alert Phone Number</string>
    <string name="alert_phone_summary">Dial this number when sound activity is detected</string>
    <string name="sound_threshold">Sound Threshold</string>
    <string name="sound_threshold_summary">Sound level at which to dial alert number</string>
    <string name="sleep">Sleep Interval</string>
    <string name="sleep_summary">Periodically suspend monitoring</string>
    <string name="display_update">Enable Graphics</string>
    <string name="display_update_summary">Enable graphical volume meter</string>
    <string name="no_num_title">Missing Number</string>
    <string name="no_num_msg">No alert phone number has been set!</string>
    <string name="alarmtime"></string>
    <string name="weatherfake2"></string>
    <string name="umbrella"></string>
    <string name="title_activity_main">MainActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- RDF Model contorl settings -->
    <string-array name="userprofile">
        <item>NormalUser</item>
        <item>DeafUser</item>
    </string-array>
    <string-array name="difficulty">
        <item>NormalDiff</item>
        <item>HardDiff</item>
    </string-array>
    <string-array name="weather">
        <item>Sunny</item>
        <item>Snowy</item>
        <item>Cloudy</item>
        <item>Rainy</item>
    </string-array>

    <string name="title_activity_vibrator_demo">VibratorDemoActivity</string>

</resources>