<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:appcompat="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_item_new"
        android:icon="@drawable/bell"
        android:title="@string/menu_item_new"
        appcompat:showAsAction="always"></item>

    <item
        android:id="@+id/menu_item_save"
        android:icon="@drawable/glyphicons_443_floppy_disk"
        android:title="@string/menu_item_save"
        appcompat:showAsAction="always"></item>
    <item
        android:id="@+id/menu_item_delete"
        android:icon="@drawable/glyphicons_016_bin"
        android:title="@string/menu_item_delete"
        appcompat:showAsAction="always"></item>
    <item
        android:id="@+id/menu_item_rate"
        android:icon="@drawable/glyphicons_049_star"
        android:title="@string/menu_item_rate"></item>
    <item
        android:id="@+id/menu_item_website"
        android:icon="@drawable/glyphicons_340_globe"
        android:title="@string/menu_item_website"></item>
    <item
        android:id="@+id/menu_item_report"
        android:icon="@drawable/glyphicons_340_globe"
        android:title="@string/menu_item_report"></item>

</menu>