<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="#6EC1C5"
android:orientation="vertical"
android:weightSum="1">


    <TextClock
        android:layout_width="100dp"
        android:layout_height="0dp"
        android:id="@+id/textClock"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.16"
        android:textAlignment="center"
        android:textAppearance="@drawable/abc_ic_go_search_api_holo_light"
        android:textSize="40dp"
        android:textIsSelectable="@bool/abc_config_showMenuShortcutsWhenKeyboardPresent"
        android:textColorLink="@color/abc_search_url_text_holo" />

    <ImageButton
        android:id="@+id/weatherfake"
        android:icon="@drawable/weatherfake"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/weatherfake"
        android:src="@drawable/weatherfake"
        android:layout_gravity="center_horizontal|bottom"
        android:background="@drawable/transparent_color"
        android:layout_marginTop="20dp" />

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView"
        android:layout_gravity="center_horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="5dp"
            android:gravity="center"
            android:paddingTop="10dp">
            <!--android:id="@+id/">-->

<!--put the settled alarm time here-->
            <TextView
                android:id="@+id/textView_alarm_time"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:background="#999999"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:contentDescription="@string/alarmtime"
                android:layout_gravity="center_horizontal" />
             <TextView
                android:id="@+id/textView_alarm_time2"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:background="#999999"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:contentDescription="@string/alarmtime"
                android:layout_gravity="center_horizontal" />
        </LinearLayout>
    </ScrollView>
            <ImageButton
            android:id="@+id/menu_item_new"
            android:icon="@drawable/bell"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/bell"
            android:background="@drawable/transparent_color" />

</LinearLayout>